--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,5 @@ jobs:
           username: ${{secrets.FTP_USER}}
           password: ${{secrets.FTP_PASS}}
           port: ${{secrets.FTP_PORT}}
+          protocol: ftps
           local-dir: ./public/
