--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,4 +20,5 @@ jobs:
           password: ${{secrets.FTP_PASS}}
           port: ${{secrets.FTP_PORT}}
           protocol: ftps
+          security: loose
           local-dir: ./public/
